--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "firebase": "^9.13.0",
     "next": "13.0.0",
     "peerjs": "^1.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.0.3"
+    "react-firebase-hooks": "^5.0.3",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
