--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "date-fns": "^2.29.3",
     "firebase": "^9.13.0",
     "next": "13.0.0",
     "peerjs": "^1.4.7",
