--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "date-fns": "^2.29.3",
+    "dompurify": "^2.4.0",
     "firebase": "^9.13.0",
+    "marked": "^4.2.1",
     "next": "13.0.0",
     "peerjs": "^1.4.7",
     "react": "18.2.0",
