--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.13.0",
     "marked": "^4.2.1",
     "next": "13.0.0",
+    "next-absolute-url": "^1.2.2",
     "peerjs": "^1.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
