--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0",
+    "twemoji": "^14.0.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
