--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "dompurify": "^2.4.0",
     "firebase": "^9.13.0",
     "marked": "^4.2.1",
+    "moment": "^2.29.4",
     "next": "13.0.0",
     "next-absolute-url": "^1.2.2",
     "peerjs": "^1.4.7",
