--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0",
     "twemoji": "^14.0.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "webrtc": "^1.14.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
