--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.30.4",
     "@reduxjs/toolkit": "^1.8.6",
     "date-fns": "^2.29.3",
     "dompurify": "^2.4.0",
