--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "next": "13.0.0",
     "next-absolute-url": "^1.2.2",
+    "next-pwa": "^5.6.0",
     "peerjs": "^1.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
